--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,7 @@
         <p>Code licensed <a href="https://github.com/lexkrstn/sked-tape/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, see docs on <a href="https://github.com/lexkrstn/sked-tape" target="_blank" rel="license noopener">GitHub</a>.</p>
       </div>
     </footer>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/solid.css" integrity="sha384-wnAC7ln+XN0UKdcPvJvtqIH3jOjs9pnKnq9qX68ImXvOGz2JuFoEiCjT8jyZQX2z" crossorigin="anonymous">
